testsuite/tests/interpreter_errors/call_property_wrong_type/test.out
main.adb
script:2:16: error: Cannot convert a KIND_INT to a BOOLEAN_VALUE
2 | print(names[1].referenced_decl(1))
  |                ^^^^^^^^^^^^^^^ 

